--- a/app/views/points/index.html.erb
+++ b/app/views/points/index.html.erb
@@ -9,13 +9,18 @@
     <th></th>
   </tr>
 
-<% @points.each do |point| %>
+<% @points.each do |point|    %>
   <tr>
-    <td><%= point.latitude %></td>
-    <td><%= point.longitude %></td>
-    <td><%= link_to 'Show', point %></td>
-    <td><%= link_to 'Edit', edit_point_path(point) %></td>
-    <td><%= link_to 'Destroy', point, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= point.latitude 
+	     %></td>
+    <td><%=point.longitude 
+	    %></td>
+    <td><%=# link_to 'Show', points 
+	     %></td>
+    <td><%=# link_to 'Edit', edit_point_path(point) 
+	     %></td>
+    <td><%= #link_to 'Destroy', point, :confirm => 'Are you sure?', :method => :delete 
+      %></td>
   </tr>
 <% end %>
 </table>
