points index form working better

--- a/app/views/points/index.html.erb
+++ b/app/views/points/index.html.erb
@@ -13,12 +13,9 @@
   <tr>
     <td><%= point.latitude 	     %></td>
     <td><%= point.longitude 	    %></td>
-    <td>link_to 'Show' BROKEN <%=# link_to 'Show', points 	     
-	     %></td>
-    <td>link_to 'Edit' BROKEN<%=# link_to 'Edit', edit_point_path(point) 	     
-	     %></td>
-    <td>link_to 'Destroy' BROKEN<%=# link_to 'Destroy', point, :confirm => 'Are you sure?', :method => :delete       
-      %></td>
+    <td><%= link_to ('Show',point ) 	     	     %></td>
+    <td><%= link_to 'Edit', edit_point_path(point)   %></td>
+    <td><%= link_to 'Destroy', point, :confirm => 'Are you sure?', :method => :delete             %></td>
   </tr>
 <% end %>
 </table>
