working on tag form

--- a/app/views/points/_form.html.erb
+++ b/app/views/points/_form.html.erb
@@ -19,6 +19,13 @@
     <%= f.label :longitude %><br />
     <%= f.text_field :longitude %>
   </div>
+
+  <div class="tags">
+    TAGS TODO
+    <%= render :partial => 'tags', :collection => @point.point_tags %>
+  </div>
+  
+
   <div class="actions">
     <%= f.submit %>
   </div>
