--- a/app/views/point_tags/_form.html.erb
+++ b/app/views/point_tags/_form.html.erb
@@ -20,8 +20,10 @@
     <%= f.text_field :value %>
   </div>
   <div class="field">
+    <b>be careful editing this field</b>
     <%= f.label :point_id %><br />
     <%= f.text_field :point_id %>
+
   </div>
   <div class="actions">
     <%= f.submit %>
