--- a/app/views/point_tags/edit.html.erb
+++ b/app/views/point_tags/edit.html.erb
@@ -2,5 +2,9 @@
 
 <%= render 'form' %>
 
+<h3>
+TODO Make a link to the point.
+</h3>
+
 <%= link_to 'Show', @point_tag %> |
 <%= link_to 'Back', point_tags_path %>
