more forms for route tags

--- a/app/views/route_tags/_form.html.erb
+++ b/app/views/route_tags/_form.html.erb
@@ -11,6 +11,33 @@
     </div>
   <% end %>
 
+  <div class="field">
+    <%= f.label :key %><br />
+    <%= f.text_field :key %>
+  </div>
+  <div class="field">
+    <%= f.label :value %><br />
+    <%= f.text_field :value %>
+  </div>
+
+  <div class="field">
+    <b>be careful editing this field</b>
+    <%= f.label :route_id %><br />
+    <%= f.text_field :route_id %>
+  </div>
+
+  <div class="field">
+    <b>be careful editing this field</b>
+    <%= f.label :id %><br />
+    <%= f.text_field :id %>
+  </div>
+
+  <div class="field">
+    <b>be careful editing this field</b>
+    <%= f.label :version %><br />
+    <%= f.text_field :version %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
