--- a/app/views/route_points/_form.html.erb
+++ b/app/views/route_points/_form.html.erb
@@ -11,6 +11,10 @@
     </div>
   <% end %>
 
+  <div class="field">  <%= f.label :point_id %><br />    <%= f.text_field :point_id %>
+  <div class="field">  <%= f.label :route_id %><br />    <%= f.text_field :route_id %>
+  <div class="field">  <%= f.label :version %><br />    <%= f.text_field :version %>
+
   <div class="actions">
     <%= f.submit %>
   </div>
