--- a/app/views/route_points/index.html.erb
+++ b/app/views/route_points/index.html.erb
@@ -9,6 +9,12 @@
 
 <% @route_points.each do |route_point| %>
   <tr>
+    <td><%= route_point.point_id 	     %></td>
+    <td><%= route_point.route_id 	     %></td>
+    <td><%= route_point.version 	    %></td>
+    <td><%= route_point.created_at 	    %></td>
+    <td><%= route_point.updated_at 	    %></td>
+
     <td><%= link_to 'Show', route_point %></td>
     <td><%= link_to 'Edit', edit_route_point_path(route_point) %></td>
     <td><%= link_to 'Destroy', route_point, :confirm => 'Are you sure?', :method => :delete %></td>
