--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,8 +1,18 @@
 <p>This is <b>very alpha</b> and there is not much to see yet unless you are a coder. Transiki is a wiki of transit data. Think a blend of google transit and openstreetmap.
 
-<p>You can look at the <a href="http://blog.transiki.org/">blog</a> and <a href="http://lists.transiki.org/mailman/listinfo/talk">mailing list</a> and <a href="http://github.com/SteveC/transiki/">code</a>.
+<p>You can look at the <a href="http://blog.transiki.org/">blog</a> 
+and <a href="http://wiki.transiki.org">wiki</a> 
+and <a href="http://lists.transiki.org/mailman/listinfo/talk">mailing list</a> 
+
+  and <a href="http://github.com/h4ck3rm1k3/transiki/">this code</a> which is a branch of
+  the original <a href="http://github.com/stevec/transiki/">code</a>.
 
 <% if @user %>
 <p><%= link_to 'new point', new_point_path %>
+<p><%= link_to "new point tag", new_route_point_tag_path %>
+<p><%= link_to "new route",new_route_path%>
+<p><%= link_to "new route tag", new_route_tag_path%>
+<p><%= link_to "new route point",new_route_point_path%>
+<p><%= link_to "admin", admin_index_path%>
 <% end %>
 
