--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -13,6 +13,14 @@ and <a href="http://lists.transiki.org/mailman/listinfo/talk">mailing list</a>
 <p><%= link_to "new route",new_route_path%>
 <p><%= link_to "new route tag", new_route_tag_path%>
 <p><%= link_to "new route point",new_route_point_path%>
+
+<p><%= link_to "show points", points_path %>
+<p><%= link_to "point tags", route_point_tags_path %>
+<p><%= link_to "routes", routes_path%>
+<p><%= link_to "route tags", route_tags_path%>
+<p><%= link_to "route points",route_points_path%>
+
+
 <p><%= link_to "admin", admin_index_path%>
 <% end %>
 
