--- a/app/views/point_tags/_form.html.erb
+++ b/app/views/point_tags/_form.html.erb
@@ -23,7 +23,8 @@
     <b>be careful editing this field</b>
     <%= f.label :point_id %><br />
     <%= f.text_field :point_id %>
-    <%=h link_to ("Point", :controller => "points", :action => "show", :id => @point_tag.point_id) %></p>
+    <%=#h link_to ("Point", :controller => "points", :action => "show", :id => @point_tag.point_id) 
+    %></p>
   </div>
 
   <div class="field">
