--- a/app/views/points/_form.html.erb
+++ b/app/views/points/_form.html.erb
@@ -31,7 +31,7 @@
       <%= link_to 'Edit', edit_point_tag_path(tag) %> |
     </div>
     <% end %>
-
+    <%= link_to 'New Tag', new_point_tag_path, :point_id => @point.id %>
   </div>
   
 
