need to check if the value is nul

--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -21,6 +21,9 @@ and <a href="http://lists.transiki.org/mailman/listinfo/talk">mailing list</a>
 <p><%= link_to "route points",route_points_path%>
 
 
+<p><%= link_to "tags",tags_path%>
+
+
 <p><%= link_to "admin", admin_index_path%>
 <% end %>
 
