--- a/app/views/tag_tags/show.html.erb
+++ b/app/views/tag_tags/show.html.erb
@@ -27,4 +27,5 @@
 
 
 <%= link_to 'Edit', edit_tag_tag_path(@tag_tag) %> |
+<%= link_to 'New Tag Tag', new_tag_tag_path %>
 <%= link_to 'Back', tag_tags_path %>
