--- a/app/views/tag_tags/edit.html.erb
+++ b/app/views/tag_tags/edit.html.erb
@@ -2,5 +2,6 @@
 
 <%= render 'form' %>
 
+<%= link_to 'New Tag Tag', new_tag_tag_path %>
 <%= link_to 'Show', @tag_tag %> |
 <%= link_to 'Back', tag_tags_path %>
