--- a/app/views/tag_tags/_form.html.erb
+++ b/app/views/tag_tags/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :tag_id %><br />
-    <%= f.text_field :tag_id %>
+    <%= f.select :tag_id, @tags %>
   </div>
   <div class="field">
     <%= f.label :key %><br />
