--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -22,6 +22,7 @@ and <a href="http://lists.transiki.org/mailman/listinfo/talk">mailing list</a>
 
 
 <p><%= link_to "tags",tags_path%>
+<p><%= link_to "tag_tags",tag_tags_path%>
 
 
 <p><%= link_to "admin", admin_index_path%>
