--- a/app/views/google_sheets/_form.html.erb
+++ b/app/views/google_sheets/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_field :key %>
   </div>
   <div class="field">
-    <%= f.label :type %><br />
-    <%= f.text_field :type %>
+    <%= f.label :sheettype %><br />
+    <%= f.text_field :sheettype %>
   </div>
   <div class="field">
     <%= f.label :name %><br />
