--- a/app/views/google_sheets/_form.html.erb
+++ b/app/views/google_sheets/_form.html.erb
@@ -27,6 +27,10 @@
     <%= f.label :description %><br />
     <%= f.text_area :description %>
   </div>
+
+  <div class="field">  <%= f.label :headerrow %><br />    <%= f.text_field :headerrow %>  </div>
+  <div class="field">  <%= f.label :classname %><br />    <%= f.text_field :classname %>  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
