--- a/app/views/google_sheets/index.html.erb
+++ b/app/views/google_sheets/index.html.erb
@@ -6,6 +6,8 @@
     <th>Type</th>
     <th>Name</th>
     <th>Description</th>
+    <th>HeaderRow</th>
+    <th>Class Name</th>
     <th></th>
     <th></th>
     <th></th>
@@ -17,6 +19,8 @@
     <td><%= google_sheet.sheettype %></td>
     <td><%= google_sheet.name %></td>
     <td><%= google_sheet.description %></td>
+    <td><%= google_sheet.headerrow %></td>
+    <td><%= google_sheet.classname %></td>
     <td><%= link_to 'Show', google_sheet %></td>
     <td><%= link_to 'Edit', edit_google_sheet_path(google_sheet) %></td>
     <td><%= link_to 'Destroy', google_sheet, :confirm => 'Are you sure?', :method => :delete %></td>
