--- a/app/views/google_sheets/_form.html.erb
+++ b/app/views/google_sheets/_form.html.erb
@@ -28,8 +28,9 @@
     <%= f.text_area :description %>
   </div>
 
-  <div class="field">  <%= f.label :headerrow %><br />    <%= f.text_field :headerrow %>  </div>
-  <div class="field">  <%= f.label :classname %><br />    <%= f.text_field :classname %>  </div>
+  <div class="field">  <%=f.label :headerrow %><br />    <%= f.text_field :headerrow %>  </div>
+  <div class="field">  <%=f.label :classname %><br />    <%= f.text_field :classname %>  </div>
+  <div class="field">  <%=f.label :sheetname %><br />    <%= f.text_field :sheetname %>  </div>
 
   <div class="actions">
     <%= f.submit %>
