--- a/app/views/mediawikiimagefiles/geotag.html.erb
+++ b/app/views/mediawikiimagefiles/geotag.html.erb
@@ -101,5 +101,7 @@
 
 <% end %>
 
+<%= link_to "point", point_path(@point) %> |
+
 <%= link_to 'Edit', edit_mediawikiimagefile_path(@mediawikiimagefile) %> |
 <%= link_to 'Back', mediawikiimagefiles_path %>
