cleaned up geocoding

--- a/app/views/mediawikiimagefiles/geotag.html.erb
+++ b/app/views/mediawikiimagefiles/geotag.html.erb
@@ -63,7 +63,7 @@
 
 </script>
 
-<%= form_for(@point, :url => { :action => "create_geotag" } ) do |f| %>
+<%= form_for(@point, :url => { :action => "geotag" } ) do |f| %>
 
 <div class="field">
   <%= f.label :id %><br />
